@@ -1,13 +1,71 @@
-https://github.com/2023-05-JAVA-DEVELOPER-143/01.JAVA_FUNDMENTAL
+## intro
+
+# 강사(김경호)메일주소
+   * guard884@gmail.com
+
+# todo
+   * github가입
+   * chrome 다운로드
+   * font D2코딩체
+   * 파일탐색기 -->보기 -->파일확장명,숨긴항목체크
+   * c: 드라이브에 2023-12-JAVA-DEVELOPER 이름폴더생성
 
 
 
-- github가입
-- chrome
-- font
-- 파일탐색기 -->보기 -->파일확장명,숨긴항목체크
-- c: 드라이브에 2023-05-JAVA-DEVELOPER 이름폴더생성
+# 구글드라이브
+  * 문서
+  * 개발툴
+  * GITHUB아이디 
+
+# GITHUB 
 
 
 
-![]()
+# 크롬부라우져설치
+https://www.google.com/chrome/
+ 
+
+# D2코딩체다운설치
+https://github.com/naver/d2codingfont/releases
+
+# NotePad++ 다운설치
+https://notepad-plus-plus.org/downloads/
+
+
+# JDK
+
+http://www.oracle.com/index.html
+
+https://www.oracle.com/java/technologies/downloads/#java8-windows
+
+## 이클립스
+
+https://www.eclipse.org/downloads/packages/release
+
+
+## 이클립스 플러그인
+ 
+ # window builder
+   * https://github.com/eclipse-windowbuilder/windowbuilder
+   * http://download.eclipse.org/windowbuilder/latest/
+
+ # properties editor
+   * http://propedit.sourceforge.jp/eclipse/updates/
+ 
+ # UML,ERD
+   * http://takezoe.github.io/amateras-update-site/
+   * https://github.com/takezoe/amateras-modeler
+	
+    + <b><< eclipse.ini 파일의 마지막에 추가>></b>
+    ```
+     --add-opens=java.desktop/java.beans=ALL-UNNAMED
+    ```
+
+ # java5 api doc 한글API
+   * http://cris.joongbu.ac.kr/course/java/api/index.html?overview-tree.html
+
+ # jdk8  api doc
+   * http://docs.oracle.com/javase/8/docs/api/index.html     
+
+## jdk16 api doc
+   * https://docs.oracle.com/en/java/javase/16/docs/api/index.html 
